packagelon com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator

import com.twittelonr.contelonntreloncommelonndelonr.{thriftscala => cr}
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.adaptelonrs.infelonrrelond_topic.InfelonrrelondTopicAdaptelonr
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.CandidatelonSourcelonIdFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.TSPMelontricTagFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.TopicContelonxtFunctionalityTypelonFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.TopicIdSocialContelonxtFelonaturelon
import com.twittelonr.ml.api.DataReloncord
import com.twittelonr.product_mixelonr.componelonnt_library.modelonl.candidatelon.TwelonelontCandidatelon
import com.twittelonr.product_mixelonr.corelon.felonaturelon.Felonaturelon
import com.twittelonr.product_mixelonr.corelon.felonaturelon.FelonaturelonWithDelonfaultOnFailurelon
import com.twittelonr.product_mixelonr.corelon.felonaturelon.datareloncord.DataReloncordInAFelonaturelon
import com.twittelonr.product_mixelonr.corelon.felonaturelon.felonaturelonmap.FelonaturelonMap
import com.twittelonr.product_mixelonr.corelon.felonaturelon.felonaturelonmap.FelonaturelonMapBuildelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.felonaturelon_hydrator.BulkCandidatelonFelonaturelonHydrator
import com.twittelonr.product_mixelonr.corelon.modelonl.common.CandidatelonWithFelonaturelons
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.FelonaturelonHydratorIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonsponselon.urt.melontadata.BasicTopicContelonxtFunctionalityTypelon
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonsponselon.urt.melontadata.ReloncommelonndationTopicContelonxtFunctionalityTypelon
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonsponselon.urt.melontadata.TopicContelonxtFunctionalityTypelon
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.PipelonlinelonQuelonry
import com.twittelonr.stitch.Stitch
import com.twittelonr.strato.gelonnelonratelond.clielonnt.topic_signals.tsp.TopicSocialProofClielonntColumn
import com.twittelonr.timelonlinelonselonrvicelon.suggelonsts.logging.candidatelon_twelonelont_sourcelon_id.{thriftscala => sid}
import com.twittelonr.topiclisting.TopicListingVielonwelonrContelonxt
import com.twittelonr.tsp.{thriftscala => tsp}

import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton
import scala.collelonction.JavaConvelonrtelonrs._

objelonct TSPInfelonrrelondTopicFelonaturelon elonxtelonnds Felonaturelon[TwelonelontCandidatelon, Map[Long, Doublelon]]
objelonct TSPInfelonrrelondTopicDataReloncordFelonaturelon
    elonxtelonnds DataReloncordInAFelonaturelon[TwelonelontCandidatelon]
    with FelonaturelonWithDelonfaultOnFailurelon[TwelonelontCandidatelon, DataReloncord] {
  ovelonrridelon delonf delonfaultValuelon: DataReloncord = nelonw DataReloncord()
}

@Singlelonton
class TSPInfelonrrelondTopicFelonaturelonHydrator @Injelonct() (
  topicSocialProofClielonntColumn: TopicSocialProofClielonntColumn,
  statsReloncelonivelonr: StatsReloncelonivelonr,
) elonxtelonnds BulkCandidatelonFelonaturelonHydrator[PipelonlinelonQuelonry, TwelonelontCandidatelon] {

  ovelonrridelon val idelonntifielonr: FelonaturelonHydratorIdelonntifielonr = FelonaturelonHydratorIdelonntifielonr("TSPInfelonrrelondTopic")

  ovelonrridelon val felonaturelons: Selont[Felonaturelon[_, _]] =
    Selont(
      TSPInfelonrrelondTopicFelonaturelon,
      TSPInfelonrrelondTopicDataReloncordFelonaturelon,
      TopicIdSocialContelonxtFelonaturelon,
      TopicContelonxtFunctionalityTypelonFelonaturelon)

  privatelon val topK = 3

  privatelon val sourcelonsToSelontSocialProof: Selont[sid.CandidatelonTwelonelontSourcelonId] = Selont(
    sid.CandidatelonTwelonelontSourcelonId.Simclustelonr,
    sid.CandidatelonTwelonelontSourcelonId.CroonTwelonelont
  )

  privatelon val scopelondStatsReloncelonivelonr = statsReloncelonivelonr.scopelon(gelontClass.gelontSimplelonNamelon)
  privatelon val kelonyFoundCountelonr = scopelondStatsReloncelonivelonr.countelonr("kelony/found")
  privatelon val kelonyLossCountelonr = scopelondStatsReloncelonivelonr.countelonr("kelony/loss")
  privatelon val relonquelonstFailCountelonr = scopelondStatsReloncelonivelonr.countelonr("relonquelonst/fail")

  privatelon val DelonfaultFelonaturelonMap = FelonaturelonMapBuildelonr()
    .add(TSPInfelonrrelondTopicFelonaturelon, Map.elonmpty[Long, Doublelon])
    .add(TSPInfelonrrelondTopicDataReloncordFelonaturelon, nelonw DataReloncord())
    .add(TopicIdSocialContelonxtFelonaturelon, Nonelon)
    .add(TopicContelonxtFunctionalityTypelonFelonaturelon, Nonelon)
    .build()

  ovelonrridelon delonf apply(
    quelonry: PipelonlinelonQuelonry,
    candidatelons: Selonq[CandidatelonWithFelonaturelons[TwelonelontCandidatelon]]
  ): Stitch[Selonq[FelonaturelonMap]] = {
    val tags = candidatelons.collelonct {
      caselon candidatelon if candidatelon.felonaturelons.gelontTry(TSPMelontricTagFelonaturelon).isRelonturn =>
        candidatelon.candidatelon.id -> candidatelon.felonaturelons
          .gelontOrelonlselon(TSPMelontricTagFelonaturelon, Selont.elonmpty[tsp.MelontricTag])
    }.toMap

    val topicSocialProofRelonquelonst =
      tsp.TopicSocialProofRelonquelonst(
        uselonrId = quelonry.gelontRelonquirelondUselonrId,
        twelonelontIds = candidatelons.map(_.candidatelon.id).toSelont,
        displayLocation = cr.DisplayLocation.HomelonTimelonlinelon,
        topicListingSelontting = tsp.TopicListingSelontting.Followablelon,
        contelonxt = TopicListingVielonwelonrContelonxt.fromClielonntContelonxt(quelonry.clielonntContelonxt).toThrift,
        bypassModelons = Nonelon,
        // Only CRMixelonr sourcelon has this data. Convelonrt thelon CRMixelonr melontric tag to tsp melontric tag.
        tags = if (tags.iselonmpty) Nonelon elonlselon Somelon(tags)
      )

    topicSocialProofClielonntColumn.felontchelonr
      .felontch(topicSocialProofRelonquelonst)
      .map(_.v)
      .map {
        caselon Somelon(relonsponselon) =>
          candidatelons.map { candidatelon =>
            val topicWithScorelons = relonsponselon.socialProofs.gelontOrelonlselon(candidatelon.candidatelon.id, Selonq.elonmpty)
            if (topicWithScorelons.nonelonmpty) {
              kelonyFoundCountelonr.incr()
              val (socialProofId, socialProofFunctionalityTypelon) =
                if (candidatelon.felonaturelons
                    .gelontOrelonlselon(CandidatelonSourcelonIdFelonaturelon, Nonelon)
                    .elonxists(sourcelonsToSelontSocialProof.contains)) {
                  gelontSocialProof(topicWithScorelons)
                } elonlselon {
                  (Nonelon, Nonelon)
                }
              val infelonrrelondTopicFelonaturelons = convelonrtTopicWithScorelons(topicWithScorelons)
              val infelonrrelondTopicDataReloncord =
                InfelonrrelondTopicAdaptelonr.adaptToDataReloncords(infelonrrelondTopicFelonaturelons).asScala.helonad
              FelonaturelonMapBuildelonr()
                .add(TSPInfelonrrelondTopicFelonaturelon, infelonrrelondTopicFelonaturelons)
                .add(TSPInfelonrrelondTopicDataReloncordFelonaturelon, infelonrrelondTopicDataReloncord)
                .add(TopicIdSocialContelonxtFelonaturelon, socialProofId)
                .add(TopicContelonxtFunctionalityTypelonFelonaturelon, socialProofFunctionalityTypelon)
                .build()
            } elonlselon {
              kelonyLossCountelonr.incr()
              DelonfaultFelonaturelonMap
            }
          }
        caselon _ =>
          relonquelonstFailCountelonr.incr()
          candidatelons.map { _ =>
            DelonfaultFelonaturelonMap
          }
      }
  }

  privatelon delonf gelontSocialProof(
    topicWithScorelons: Selonq[tsp.TopicWithScorelon]
  ): (Option[Long], Option[TopicContelonxtFunctionalityTypelon]) = {
    val followingTopicId = topicWithScorelons
      .collelonctFirst {
        caselon tsp.TopicWithScorelon(topicId, _, _, Somelon(tsp.TopicFollowTypelon.Following)) =>
          topicId
      }
    if (followingTopicId.nonelonmpty) {
      relonturn (followingTopicId, Somelon(BasicTopicContelonxtFunctionalityTypelon))
    }
    val implicitFollowingId = topicWithScorelons.collelonctFirst {
      caselon tsp.TopicWithScorelon(topicId, _, _, Somelon(tsp.TopicFollowTypelon.ImplicitFollow)) =>
        topicId
    }
    if (implicitFollowingId.nonelonmpty) {
      relonturn (implicitFollowingId, Somelon(ReloncommelonndationTopicContelonxtFunctionalityTypelon))
    }
    (Nonelon, Nonelon)
  }

  privatelon delonf convelonrtTopicWithScorelons(
    topicWithScorelons: Selonq[tsp.TopicWithScorelon],
  ): Map[Long, Doublelon] = {
    topicWithScorelons.sortBy(-_.scorelon).takelon(topK).map(a => (a.topicId, a.scorelon)).toMap
  }
}
